--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,79 +1,105 @@
-jobs:
+# DEFAULTS
+defaults: &defaults
+  working_directory: ~/build_only
+  environment:
+    COMMERCE_SDK_INPUT_DIR: ../test/raml/valid/
+
+# COMMANDS
+commands:
   build:
-    environment:
-      COMMERCE_SDK_INPUT_DIR: ../test/raml/valid/
-    working_directory: ~/build_only
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm ci
+      - run: npm run build
+  test:
+    steps:
+      - run: npm run test
+      - run: npm run test:integration
+      - store_test_results:
+          path: reports
+
+# EXECUTORS
+executors:
+  node-10:
+    <<: *defaults
     docker:
       - image: circleci/node:10.16.3
       - image: redis:5-alpine
-
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm ci
-      - run: npm run build
-      - run: npm run test
-      - run: npm run test:integration
-      - store_test_results:
-          path: reports
-
-  build-12:
-    environment:
-      COMMERCE_SDK_INPUT_DIR: ../test/raml/valid/
-    working_directory: ~/build_only
+  node-12:
+    <<: *defaults
     docker:
       - image: circleci/node:12.16.1
       - image: redis:5-alpine
+  node-14:
+    <<: *defaults
+    docker:
+      - image: circleci/node:14
+      - image: redis:5-alpine
 
+# JOBS
+jobs:
+  build-node-10:
+    executor: node-10
     steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm ci
-      - run: npm run build
-      - run: npm run test
-      - run: npm run test:integration
-      - store_test_results:
-          path: reports
+      - build
+      - test
+
+  build-node-12:
+    executor: node-12
+    steps:
+      - build
+      - test
+    
+  build-node-14:
+    executor: node-14
+    steps:
+      - build
+      - test
 
   publish:
-    working_directory: ~/build_and_publish
-    executor:
-      name: node/default
-      tag: '10.16'
+    executor: node-10
     steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm ci
-      - run: npm run build
+      - build
       - run:
           name: Create npmrc file to authenticate with npm registry.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
       - run: npm run publish
+
+# WORKFLOWS
 workflows:
   version: 2
   build-and-test:
     jobs:
-      - build:
+      - build-node-10:
           filters:
             tags:
               ignore: /^v.*/
-      - build-12:
+      - build-node-12:
           filters:
             tags:
               ignore: /^v.*/
+      - build-node-14:
+          filters:
+            tags:
+              only: /^v.*/
 
   build-test-deploy:
     jobs:
-      - build:
+      - build-node-10:
           filters:
             tags:
               only: /^v.*/
             branches:
               ignore: /.*/
-      - build-12:
+      - build-node-12:
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+      - build-node-14:
           filters:
             tags:
               only: /^v.*/
@@ -87,8 +113,9 @@ workflows:
               ignore: /.*/
           type: approval
           requires:
-            - build
-            - build-12
+            - build-node-10
+            - build-node-12
+            - build-node-14
       - publish:
           filters:
             tags:
@@ -98,8 +125,10 @@ workflows:
           requires:
             - confirm-publish-if-tagged
 
-
+# ORBS
 orbs:
   node: circleci/node@1.1
+
+#VERSION
 version: 2.1
 
