--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-apps/core",
-  "version": "1.4.1-beta.0",
+  "version": "1.4.2-beta.0",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -129,9 +129,9 @@
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
     "retry": "^0.12.0",
+    "snyk": "^1.320.5",
     "ssri": "^7.1.0",
-    "tmp": "~0.2.0",
-    "snyk": "^1.320.5"
+    "tmp": "~0.2.0"
   },
   "snyk": true
 }
