--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "lerna run build",
     "test": "lerna run test",
     "test:debug": "lerna run test:debug",
-    "test:integration": "npm run test --prefix tests && lerna run test:integration",
+    "test:integration": "npm run test --prefix integrationTests && lerna run test:integration",
     "test:cache": "lerna run test:cache",
     "test:core": "lerna run --scope @commerce-apps/core test:debug",
     "test:generator": "lerna run --scope commerce-sdk test:debug",
